# Apptainer-Templates

./: .gitignore  .pre-commit-config.yaml  README.md  SPDX.spdx  pyproject.toml
templates/: base.def  core.def  miniconda.def
tests/: build_test.py  docker_test.py  overlay_test.py  utils.py
tests/docker/: Dockerfile
